--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <i class="fa-solid fa-plus text-white border p-2 rounded"></i>
                             </a>
                             
-                            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                            <div class="offcanvas offcanvas-end ms_offcanvas" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
                                 <div class="offcanvas-header">
                                   <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
                                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
