--- a/index.html
+++ b/index.html
@@ -104,59 +104,68 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
                                 <div class="offcanvas-body">
-                                    <form class="row g-3 needs-validation" novalidate>
-                                        <div class="col-md-4 position-relative">
-                                          <label for="validationTooltip01" class="form-label">First name</label>
-                                          <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
-                                          <div class="valid-tooltip">
-                                            Looks good!
-                                          </div>
+                                    <form class="row">
+                                        <div class="col-6">
+                                            <label for="Name" class="form-label">Nome</label>
+                                            <input type="text" class="form-control" aria-label="First name">
                                         </div>
-                                        <div class="col-md-4 position-relative">
-                                          <label for="validationTooltip02" class="form-label">Last name</label>
-                                          <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
-                                          <div class="valid-tooltip">
-                                            Looks good!
-                                          </div>
+                                        <div class="col-6">
+                                            <label for="Last name" class="form-label">Cognome</label>
+                                            <input type="text" class="form-control" aria-label="Last name">
                                         </div>
-                                        <div class="col-md-4 position-relative">
-                                          <label for="validationTooltipUsername" class="form-label">Username</label>
-                                          <div class="input-group has-validation">
-                                            <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
-                                            <input type="text" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
-                                            <div class="invalid-tooltip">
-                                              Please choose a unique and valid username.
+
+                                        <div class="col-6 pt-3">
+                                            <label for="email" class="form-label">Email</label>
+                                            <div class="input-group">
+                                              <div class="input-group-text">@</div>
+                                              <input type="email" class="form-control" id="autoSizingInputGroup">
                                             </div>
-                                          </div>
                                         </div>
-                                        <div class="col-md-6 position-relative">
-                                          <label for="validationTooltip03" class="form-label">City</label>
-                                          <input type="text" class="form-control" id="validationTooltip03" required>
-                                          <div class="invalid-tooltip">
-                                            Please provide a valid city.
-                                          </div>
+                                        <div class="col-6 pt-3">
+                                            <label for="passward" class="form-label">Passward</label>
+                                            <input type="password" class="form-control" aria-label="passward">
                                         </div>
-                                        <div class="col-md-3 position-relative">
-                                          <label for="validationTooltip04" class="form-label">State</label>
-                                          <select class="form-select" id="validationTooltip04" required>
-                                            <option selected disabled value="">Choose...</option>
-                                            <option>...</option>
-                                          </select>
-                                          <div class="invalid-tooltip">
-                                            Please select a valid state.
-                                          </div>
+
+                                        <div class="col-12 pt-3">
+                                            <label for="indirizzo" class="form-label">Indirizzo</label>
+                                            <input type="text" class="form-control" aria-label="indirizzo">
                                         </div>
-                                        <div class="col-md-3 position-relative">
-                                          <label for="validationTooltip05" class="form-label">Zip</label>
-                                          <input type="text" class="form-control" id="validationTooltip05" required>
-                                          <div class="invalid-tooltip">
-                                            Please provide a valid zip.
-                                          </div>
+
+                                        <div class="col-6 pt-3">
+                                            <label for="citta" class="form-label">Città</label>
+                                            <input type="text" class="form-control" aria-label="citta">
                                         </div>
-                                        <div class="col-12">
-                                          <button class="btn btn-primary" type="submit">Submit form</button>
+                                        <div class="col-4 pt-3">
+                                            <label for="stato" class="form-label">Stato</label>
+                                            <input type="text" class="form-control" aria-label="stato">
                                         </div>
-                                      </form>
+                                        <div class="col-2 pt-3">
+                                            <label for="cap" class="form-label">CAP</label>
+                                            <input type="text" class="form-control" aria-label="cap">
+                                        </div>
+
+                                        <div class="col-12 pt-3">
+                                            <label for="foto" class="form-label">Foto</label>
+                                            <div class="input-group">
+                                              <div class="input-group-text">Scegli file</div>
+                                              <input type="file" class="form-control" id="autoSizingInputGroup" placeholder="Nessun file selezionato">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-12 pt-3">
+                                            <input type="checkbox"> <span>Seleziona per proseguire</span>
+                                        </div>
+
+                                        <div class="col-12 pt-3">
+                                            <button type="submit" class="btn btn-primary">Salva</button>
+                                            <button type="reset" class="btn btn-warning">Svuota</button>
+                                            
+                                        </div>
+                                        
+
+
+
+                                    </form>
                                 </div>
                               </div>
                         </div>
