--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -231,7 +231,7 @@
                                                         </td>
                                                     </tr>
                                                     
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -248,7 +248,7 @@
                                                         </td>
                                                     </tr>
 
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -265,7 +265,7 @@
                                                         </td>
                                                     </tr>
 
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -282,7 +282,7 @@
                                                         </td>
                                                     </tr>
 
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -299,7 +299,7 @@
                                                         </td>
                                                     </tr>
 
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -316,7 +316,7 @@
                                                         </td>
                                                     </tr>
 
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
@@ -333,7 +333,7 @@
                                                         </td>
                                                     </tr>
 
-                                                    <tr>
+                                                    <tr class="ms_bg_hover">
                                                         <th scope="row">
                                                             <div class="ms_image">
                                                                 <img class="container-fluid rounded-circle" src="img/class-avatar.jpg" alt="code tag">
